external-crates/move/crates/move-compiler/tests/move_2024/parser/long_path.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/parser/long_path.move:7:26
  │
7 │     public struct A { y: 0x42::m::X::Y }
  │                          ^^^^^^^^^^ Expected a module or address in this position, not a module member

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/parser/long_path.move:8:26
  │
8 │     public struct B { x: 0x42::m::X::X }
  │                          ^^^^^^^^^^ Expected a module or address in this position, not a module member

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/parser/long_path.move:10:27
   │
10 │     fun foo(): 0x42::m::X<042::m::Y::Y> {
   │                           ^^^^^^^^^ Expected a module or address in this position, not a module member

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/parser/long_path.move:11:9
   │
11 │         0x42::m::X<u64>::X { t: abort 0 }
   │         ^^^^^^^^^^ Expected a module or address in this position, not a module member

